Added error handling for request fail

--- a/index.html
+++ b/index.html
@@ -48,48 +48,48 @@
   			<th>
   				<a href="#" ng-click="orderByField='city'; reverseSort = !reverseSort"> City
   					<span ng-show="orderByField == 'city'">
-	  					<span ng-show="!reverseSort">^</span>
-	  					<span ng-show="reverseSort">v</span>
+              <span ng-show="!reverseSort" class="glyphicon glyphicon-chevron-up" aria-hidden="true"></span>
+              <span ng-show="reverseSort" class="glyphicon glyphicon-chevron-down" aria-hidden="true">v</span>
   					</span>
           </a>
         </th>
   			<th> 
   				<a href="#" ng-click="orderByField='temperature'; reverseSort = !reverseSort"> Temperature
   					<span ng-show="orderByField == 'temperature'">
-	  					<span ng-show="!reverseSort">^</span>
-	  					<span ng-show="reverseSort">v</span>
+	  					<span ng-show="!reverseSort" class="glyphicon glyphicon-chevron-up" aria-hidden="true"></span>
+              <span ng-show="reverseSort" class="glyphicon glyphicon-chevron-down" aria-hidden="true">v</span>
   					</span>
           </a>
         </th>
   			<th> 
   				<a href="#" ng-click="orderByField='wind'; reverseSort = !reverseSort"> Wind Speed
   					<span ng-show="orderByField == 'wind'">
-	  					<span ng-show="!reverseSort">^</span>
-	  					<span ng-show="reverseSort">v</span>
+	  					<span ng-show="!reverseSort" class="glyphicon glyphicon-chevron-up" aria-hidden="true"></span>
+              <span ng-show="reverseSort" class="glyphicon glyphicon-chevron-down" aria-hidden="true">v</span>
   					</span>
           </a>
         </th>
   			<th> 
   				<a href="#" ng-click="orderByField='cloud'; reverseSort = !reverseSort"> Cloud 
   					<span ng-show="orderByField == 'cloud'">
-	  					<span ng-show="!reverseSort">^</span>
-	  					<span ng-show="reverseSort">v</span>
+	  					<span ng-show="!reverseSort" class="glyphicon glyphicon-chevron-up" aria-hidden="true"></span>
+              <span ng-show="reverseSort" class="glyphicon glyphicon-chevron-down" aria-hidden="true">v</span>
   					</span>
           </a> 
         </th>
   			<th> 
   				<a href="#" ng-click="orderByField='sunrise'; reverseSort = !reverseSort"> Sun Rise
   					<span ng-show="orderByField == 'sunrise'">
-	  					<span ng-show="!reverseSort">^</span>
-	  					<span ng-show="reverseSort">v</span>
+	  				 <span ng-show="!reverseSort" class="glyphicon glyphicon-chevron-up" aria-hidden="true"></span>
+             <span ng-show="reverseSort" class="glyphicon glyphicon-chevron-down" aria-hidden="true">v</span>
   					</span>
           </a>
         </th>
   			<th>
   				<a href="#" ng-click="orderByField='sunset'; reverseSort = !reverseSort"> Sun Set
   					<span ng-show="orderByField == 'sunset'">
-	  					<span ng-show="!reverseSort">^</span>
-	  					<span ng-show="reverseSort">v</span>
+	  					<span ng-show="!reverseSort" class="glyphicon glyphicon-chevron-up" aria-hidden="true"></span>
+              <span ng-show="reverseSort" class="glyphicon glyphicon-chevron-down" aria-hidden="true">v</span>
   					</span>
           </a>
         </th>
