Add Error show/hide for invalid city

--- a/index.html
+++ b/index.html
@@ -15,12 +15,20 @@
       </div>
       <div class="container">
          <form class="form-horizontal"  ng-submit="submit()">
+           <!--  <div class="form-group">
+               <label class="control-label col-sm-2 hide" for="error">{{error}}</label>
+                -->
+            </div>
             <div class="form-group">
                <label class="control-label col-sm-2" for="city">City :</label>
                <div class="col-sm-10">
                   <input type="input" ng-model="city" class="form-control" id="city" placeholder="Enter City " name="city" required >
                </div>
             </div>
+
+                <p class="text-danger" ng-show="isError()" id="error">{{error}}</p>
+            
+            
             <div class="form-group" >
                <div class="col-sm-offset-2 col-sm-10">
                   <div class="radio">
@@ -43,7 +51,7 @@
             <th>
                <a href="#" ng-click="orderByField='city'; reverseSort = !reverseSort"> City
                <span ng-show="orderByField == 'city'">
-               <span ng-show="!reverseSort" class="glyphicon glyphicon-chevron-up" aria-hidden="true"></span>
+               <span ng-show="!reverseSort" class="glyphicon glyphicon-chevron-up" aria-hidden="false"></span>
                <span ng-show="reverseSort" class="glyphicon glyphicon-chevron-down" aria-hidden="true">v</span>
                </span>
                </a>
@@ -51,40 +59,41 @@
             <th> 
                <a href="#" ng-click="orderByField='temperature'; reverseSort = !reverseSort"> Temperature
                <span ng-show="orderByField == 'temperature'">
-               <span ng-show="!reverseSort" class="glyphicon glyphicon-chevron-up" aria-hidden="true"></span>
-               <span ng-show="reverseSort" class="glyphicon glyphicon-chevron-down" aria-hidden="true">v</span>
+               <span ng-show="!reverseSort" class="glyphicon glyphicon-chevron-up" aria-hidden="false"></span>
+               <span ng-show="reverseSort" class="glyphicon glyphicon-chevron-down" aria-hidden="false">v</span>
                </span>
                </a>
             </th>
             <th> 
                <a href="#" ng-click="orderByField='wind'; reverseSort = !reverseSort"> Wind Speed
                <span ng-show="orderByField == 'wind'">
-               <span ng-show="!reverseSort" class="glyphicon glyphicon-chevron-up" aria-hidden="true"></span>
-               <span ng-show="reverseSort" class="glyphicon glyphicon-chevron-down" aria-hidden="true">v</span>
+               <span ng-show="!reverseSort" class="glyphicon glyphicon-chevron-up" aria-hidden="false"></span>
+               <span ng-show="reverseSort" class="glyphicon glyphicon-chevron-down" aria-hidden="false">v</span>
                </span>
                </a>
             </th>
             <th> 
                <a href="#" ng-click="orderByField='cloud'; reverseSort = !reverseSort"> Cloud 
                <span ng-show="orderByField == 'cloud'">
-               <span ng-show="!reverseSort" class="glyphicon glyphicon-chevron-up" aria-hidden="true"></span>
-               <span ng-show="reverseSort" class="glyphicon glyphicon-chevron-down" aria-hidden="true">v</span>
+               <span ng-show="!reverseSort" class="glyphicon glyphicon-chevron-up" aria-hidden="false"></span>
+               <span ng-show="reverseSort" class="glyphicon glyphicon-chevron-down" aria-hidden="false">v</span>
                </span>
                </a> 
             </th>
             <th> 
                <a href="#" ng-click="orderByField='sunrise'; reverseSort = !reverseSort"> Sun Rise
                <span ng-show="orderByField == 'sunrise'">
-               <span ng-show="!reverseSort" class="glyphicon glyphicon-chevron-up" aria-hidden="true"></span>
-               <span ng-show="reverseSort" class="glyphicon glyphicon-chevron-down" aria-hidden="true">v</span>
+               <span ng-show="!reverseSort" class="glyphicon glyphicon-chevron-up" aria-hidden="false"></span>
+               <span ng-show="reverseSort" class="glyphicon glyphicon-chevron-down" aria-hidden="false">v</span>
                </span>
                </a>
             </th>
             <th>
                <a href="#" ng-click="orderByField='sunset'; reverseSort = !reverseSort"> Sun Set
                <span ng-show="orderByField == 'sunset'">
+               <span ng-show="!reverseSort" class="glyphicon glyphicon-chevron-up" aria-hidden="false"></span>
                <span ng-show="!reverseSort" class="glyphicon glyphicon-chevron-up" aria-hidden="true"></span>
-               <span ng-show="reverseSort" class="glyphicon glyphicon-chevron-down" aria-hidden="true">v</span>
+               <span ng-show="reverseSort" class="glyphicon glyphicon-chevron-down" aria-hidden="false">v</span>
                </span>
                </a>
             </th>
